--- a/ShoeDatabase/MainWindow.xaml
+++ b/ShoeDatabase/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
          xmlns:local="clr-namespace:ShoeDatabase"
+        Icon="img/cipo_2.ico"
         Title="SQLite Alkalmazás" Height="450" Width="800">
     <Window.Resources>
         <local:NullToVisibilityConverter x:Key="NullToVisibilityConverter"/>
@@ -39,13 +40,15 @@
                     </Style>
                 </TextBox.Style>
             </TextBox>
-            <MenuItem Width="50" Header="Keresés" Click="SearchBox_CLick"/>
-            <MenuItem Width="50" Header="Frissités" Click="UpdateBox_CLick"/>
+            <MenuItem Width="60" Header="Keresés" Click="SearchBox_CLick"/>
+            <MenuItem Width="60" Header="Frissités" Click="UpdateBox_CLick"/>
             
             <MenuItem Header="Developer" HorizontalAlignment="Right">
-                <MenuItem Header="Új adatbázis" Click="CreateDatabase_Click"/>
+                <MenuItem Header="Új adatbázis" Click="CreateDatabase_Click" />
                 <MenuItem Header="Kapcsolat" Click="DeveloperContact_Click"/>
-                <MenuItem Header="Forrás kód" Click="DeveloperSourceCode_Click"/>
+                <MenuItem Header="Fejlesztő weboldala" Click="DeveloperWebSite_Click"/>
+                <MenuItem Header="X" Click="DeveloperX_Click" />
+                <MenuItem Header="Forrás kód" Click="DeveloperSourceCode_Click" />
             </MenuItem>
         </Menu>
 
@@ -53,8 +56,9 @@
             <DataGrid.ContextMenu>
                 <ContextMenu>
                     <MenuItem Header="Módósítás" Click="ContextMenu_Change"/>
-                    <MenuItem Header="Cipő rendelés törlése" Click="ContextMenu_Delete"/>
-                    <MenuItem Header="Ember Törlése" Click="ContextMenu_Delete_Custumer"/>
+                    <MenuItem Header="Cipő rendelés törlése" Click="ContextMenu_Delete" />
+                    <MenuItem Header="Ember Törlése" Click="ContextMenu_Delete_Custumer" />
+
                 </ContextMenu>
             </DataGrid.ContextMenu>
             <DataGrid.Columns>
