--- a/ShoeDatabase/View/MainWindow.xaml
+++ b/ShoeDatabase/View/MainWindow.xaml
@@ -1,9 +1,9 @@
 ﻿<Window x:Class="ShoeDatabase.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-         xmlns:local="clr-namespace:ShoeDatabase"
-        Icon="img/cipo_2.ico"
-        Title="SQLite Alkalmazás" Height="450" Width="800">
+         xmlns:local="clr-namespace:ShoeDatabase.CustumeView"
+        Icon="../img/cipo_2.ico"
+        Title="Rendelés Nyilvántartó" Height="450" Width="800">
     <Window.Resources>
         <local:NullToVisibilityConverter x:Key="NullToVisibilityConverter"/>
     </Window.Resources>
@@ -12,6 +12,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <Menu Grid.Row="0">
@@ -40,14 +41,15 @@
                     </Style>
                 </TextBox.Style>
             </TextBox>
-            <MenuItem Width="60" Header="Keresés" Click="SearchBox_CLick"/>
-            <MenuItem Width="60" Header="Frissités" Click="UpdateBox_CLick"/>
-            
+          <!--  <MenuItem Header="Keresés" Click="SearchBox_CLick"/>-->
+            <MenuItem Header="Keresés törlése" Click="UpdateBox_CLick"/>
+            <MenuItem Header="Vásárló hozzáadása/változtatása" Click="newCustumerBox_CLick"/>
+            <MenuItem Header="Beállítások" Click="SettingsBox_CLick"/>
             <MenuItem Header="Developer" HorizontalAlignment="Right">
                 <MenuItem Header="Új adatbázis" Click="CreateDatabase_Click" />
                 <MenuItem Header="Kapcsolat" Click="DeveloperContact_Click"/>
                 <MenuItem Header="Fejlesztő weboldala" Click="DeveloperWebSite_Click"/>
-                <MenuItem Header="X" Click="DeveloperX_Click" />
+                <MenuItem Header="Contact me in X" Click="DeveloperX_Click" />
                 <MenuItem Header="Forrás kód" Click="DeveloperSourceCode_Click" />
             </MenuItem>
         </Menu>
@@ -79,6 +81,11 @@
 
             </DataGrid.Columns>
         </DataGrid>
+
+        <StackPanel Grid.Row="2" Orientation="Horizontal" Background="LightGray" VerticalAlignment="Center">
+            <Label Content="© 2023 - Koncsik" />
+            <Label Content="version: 1.0" />
+        </StackPanel>
     </Grid>
 
 
