--- a/ShoeDatabase/View/NewEntryWindow.xaml
+++ b/ShoeDatabase/View/NewEntryWindow.xaml
@@ -53,8 +53,29 @@
         <Label Grid.Row="7" Grid.Column="0" Content="Fénykép kiválasztása:"/>
         <Button x:Name="photoButton" Grid.Row="7" Grid.Column="1" Click="PhotoButton_Click" HorizontalAlignment="Stretch">Fénykép kiválasztása</Button>
 
-        
-        
+        <ListView x:Name="ImagesListView" Grid.Row="8" Grid.ColumnSpan="2" Height="100" SelectionChanged="OnImageSelected">
+            <ListView.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="Megnyitás" Click="OpenImage_Click"/>
+                    <MenuItem Header="Törlés" Click="DeleteImage_Click"/>
+                    <MenuItem Header="Átnevezés" Click="RenameImage_Click"/>
+                    <MenuItem Header="Eszközre mentés" Click="SaveImage_Click"/>
+                </ContextMenu>
+            </ListView.ContextMenu>
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Width="auto">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <Image Width="80" Height="80" Source="{Binding}" Stretch="UniformToFill"/>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                </GridView>
+            </ListView.View>
+        </ListView>
+
+
         <Button x:Name="CancelButton" Width="Auto" Height="50" Grid.Row="10" Grid.Column="0" Click="CancelButton_Click">Mégse</Button>
         <Button x:Name="SaveButton" Width="Auto" Height="50" Grid.Row="10"  Grid.Column="1" Click="SaveButton_Click">Mentés</Button>
     </Grid>
