--- a/ShoeDatabase/View/NewEntryWindow.xaml
+++ b/ShoeDatabase/View/NewEntryWindow.xaml
@@ -1,4 +1,5 @@
 ﻿<Window x:Class="ShoeDatabase.NewEntryWindow"
+        xmlns:properties="clr-namespace:ShoeDatabase.I18N"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
@@ -28,29 +29,29 @@
         <ComboBox x:Name="custumerComboBox" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Stretch" 
                   DisplayMemberPath="Name" SelectedValuePath="Id" TextSearch.TextPath="Name"
                    SelectionChanged="CustomerComboBox_SelectionChanged" SelectedIndex="0" IsTextSearchEnabled="True" />
-        
-        <Label Grid.Row="1" Grid.Column="0" Content="Név:"/>
+
+        <Label Grid.Row="1" Grid.Column="0" Content="{x:Static properties:Resources.NameLabel}"/>
         <TextBox x:Name="nameBox" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" IsReadOnly="True"/>
 
-        <Label Grid.Row="2" Grid.Column="0" Content="Cím:"/>
+        <Label Grid.Row="2" Grid.Column="0" Content="{x:Static properties:Resources.AddressLabel}"/>
         <TextBox x:Name="addressBox" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Stretch" IsReadOnly="True"/>
 
-        <Label Grid.Row="3" Grid.Column="0" Content="TAJ szám:"/>
+        <Label Grid.Row="3" Grid.Column="0" Content="{x:Static properties:Resources.InsuranceNumberLabel}"/>
         <TextBox x:Name="tajNumberBox" Grid.Row="3" Grid.Column="1" PreviewTextInput="NumberValidationTextBox" TextChanged="TajNumberBox_TextChanged" HorizontalAlignment="Stretch" IsReadOnly="True"/>
-        
-        <Label Grid.Row="4" Grid.Column="0" Content="Rendelési szám:"/>
+
+        <Label Grid.Row="4" Grid.Column="0" Content="{x:Static properties:Resources.OrderNumberLable}"/>
         <TextBox x:Name="orderNumberBox" Grid.Row="4" Grid.Column="1" HorizontalAlignment="Stretch"/>
 
-       
 
-        <Label Grid.Row="5" Grid.Column="0" Content="Rendelés dátuma:"/>
+
+        <Label Grid.Row="5" Grid.Column="0" Content="{x:Static properties:Resources.OrderDateLabel}"/>
         <DatePicker x:Name="orderDateBox" Grid.Row="5" Grid.Column="1" HorizontalAlignment="Stretch" SelectedDate="{x:Static sys:DateTime.Now}"/>
 
-        <Label Grid.Row="6" Grid.Column="0" Content="Rendelési kiadásának dátuma:"/>
+        <Label Grid.Row="6" Grid.Column="0" Content="{x:Static properties:Resources.OrderCompletionDateLabel}"/>
         <DatePicker x:Name="orderReleaseDateBox" Grid.Row="6" Grid.Column="1" HorizontalAlignment="Stretch"/>
 
 
-        <Label Grid.Row="7" Grid.Column="0" Content="Mejegyzés:"/>
+        <Label Grid.Row="7" Grid.Column="0" Content="{x:Static properties:Resources.NoteLabel}"/>
         <TextBox x:Name="noteBox" Grid.Row="7" Grid.Column="1"
                 Height="Auto" 
                 MinLines="3"
@@ -59,30 +60,28 @@
                  HorizontalAlignment="Stretch"/>
 
 
-        <Label Grid.Row="8" Grid.Column="0" Content="Fénykép kiválasztása:"/>
+        <Label Grid.Row="8" Grid.Column="0" Content="{x:Static properties:Resources.PictureChoiceLabel}"/>
         <Button x:Name="photoButton" Grid.Row="8" Grid.Column="1" Click="PhotoButton_Click" HorizontalAlignment="Stretch">Fénykép kiválasztása</Button>
 
         <ListView x:Name="ImagesListView" Grid.Row="9" Grid.ColumnSpan="2" Height="100" SelectionChanged="OnImageSelected">
             <ListView.ContextMenu>
                 <ContextMenu>
-                    <MenuItem Header="Megnyitás" Click="OpenImage_Click"/>
-                    <MenuItem Header="Törlés" Click="DeleteImage_Click"/>
-                    <MenuItem Header="Átnevezés" Click="RenameImage_Click"/>
-                    <MenuItem Header="Eszközre mentés" Click="SaveImage_Click"/>
+                    <MenuItem Header="{x:Static properties:Resources.OpenHeader}" Click="OpenImage_Click"/>
+                    <MenuItem Header="{x:Static properties:Resources.DeleteHeader}" Click="DeleteImage_Click"/>
+                    <MenuItem Header="{x:Static properties:Resources.RenameHeader}" Click="RenameImage_Click"/>
+                    <MenuItem Header="{x:Static properties:Resources.SaveInDeviceHeader}" Click="SaveImage_Click"/>
                 </ContextMenu>
             </ListView.ContextMenu>
             <ListView.View>
-                    <GridView>
-                        <!-- Az oszlop a neveknek -->
-                        <GridViewColumn Width="auto" Header="Név">
-                            <GridViewColumn.CellTemplate>
-                                <DataTemplate>
-                                    <TextBlock Text="{Binding Name}" />
-                                </DataTemplate>
-                            </GridViewColumn.CellTemplate>
-                        </GridViewColumn>
-                        <!-- Az oszlop a képeknek -->
-                        <GridViewColumn Width="auto" Header="Kép">
+                <GridView>
+                    <GridViewColumn Width="auto" Header="{x:Static properties:Resources.NameHeader}">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Name}" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn Width="auto" Header="{x:Static properties:Resources.PictureHeader}">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
                                     <Image Width="80" Height="80" Source="{Binding BitmapImage}" Stretch="UniformToFill"/>
@@ -93,8 +92,8 @@
                 </ListView.View>
             </ListView>
 
-        <Button x:Name="CancelButton" Width="Auto" Height="50" Grid.Row="10" Grid.Column="0" Click="CancelButton_Click">Mégse</Button>
-        <Button x:Name="SaveButton" Width="Auto" Height="50" Grid.Row="10"  Grid.Column="1" Click="SaveButton_Click">Mentés</Button>
+        <Button x:Name="CancelButton" Width="Auto" Height="50" Grid.Row="10" Grid.Column="0" Click="CancelButton_Click" Content="{x:Static properties:Resources.CancleHeader}"/>
+        <Button x:Name="SaveButton" Width="Auto" Height="50" Grid.Row="10"  Grid.Column="1" Click="SaveButton_Click" Content="{x:Static properties:Resources.SaveHeader}"/>
     </Grid>
 
 
