--- a/ShoeDatabase/View/MainWindow.xaml
+++ b/ShoeDatabase/View/MainWindow.xaml
@@ -1,12 +1,9 @@
 ﻿<Window x:Class="ShoeDatabase.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:properties="clr-namespace:ShoeDatabase.I18N"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-         xmlns:local="clr-namespace:ShoeDatabase.CustumeView"
         Icon="../img/cipo_2.ico"
-        Title="Rendelés Nyilvántartó" Height="450" Width="800">
-    <Window.Resources>
-        <local:NullToVisibilityConverter x:Key="NullToVisibilityConverter"/>
-    </Window.Resources>
+        Title="{x:Static properties:Resources.NewOrederTitle}" Height="450" Width="800">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -16,14 +13,14 @@
         </Grid.RowDefinitions>
 
         <Menu Grid.Row="0">
-            <MenuItem Header="Új rendelés" Click="New_Click"/>
+            <MenuItem Header="{x:Static properties:Resources.NewOrederTitle}" Click="New_Click"/>
             <TextBox x:Name="searchBox" Width="200" Margin="5" TextChanged="SearchBox_TextChanged">
                 <TextBox.Style>
                     <Style TargetType="{x:Type TextBox}">
                         <Style.Resources>
                             <VisualBrush x:Key="CuesBrush" AlignmentX="Left" AlignmentY="Center" Stretch="None">
                                 <VisualBrush.Visual>
-                                    <Label Content="Keresés" Foreground="LightGray" Padding="0" />
+                                    <Label Content="{x:Static properties:Resources.SourceTitle}" Foreground="LightGray" Padding="0" />
                                 </VisualBrush.Visual>
                             </VisualBrush>
                         </Style.Resources>
@@ -41,31 +38,31 @@
                     </Style>
                 </TextBox.Style>
             </TextBox>
-            <MenuItem Header="Keresés törlése" Click="UpdateBox_CLick"/>
-            <MenuItem Header="Vásárló hozzáadása/változtatása" Click="newCustumerBox_CLick"/>
-            <MenuItem Header="Beállítások" Click="SettingsBox_CLick"/>
-            <MenuItem Header="Developer" HorizontalAlignment="Right">
-                <MenuItem Header="Új adatbázis" Click="CreateDatabase_Click" />
-                <MenuItem Header="Adatbázis Ellenőrzése" Click="CheckDB_Click" />
-                <MenuItem Header="Kapcsolat" Click="DeveloperContact_Click"/>
-                <MenuItem Header="Fejlesztő weboldala" Click="DeveloperWebSite_Click"/>
-                <MenuItem Header="Contact me in X" Click="DeveloperX_Click" />
-                <MenuItem Header="Forrás kód" Click="DeveloperSourceCode_Click" />
+            <MenuItem Header="{x:Static properties:Resources.DeleteSearchesTitle}" Click="UpdateBox_CLick"/>
+            <MenuItem Header="{x:Static properties:Resources.AddOrChangeCostumer}" Click="newCustumerBox_CLick"/>
+            <MenuItem Header="{x:Static properties:Resources.SettingsTitle}" Click="SettingsBox_CLick"/>
+            <MenuItem Header="{x:Static properties:Resources.Developer}" HorizontalAlignment="Right">
+                <MenuItem Header="{x:Static properties:Resources.NewDataBase}" Click="CreateDatabase_Click" />
+                <MenuItem Header="{x:Static properties:Resources.CheckDatabase}" Click="CheckDB_Click" />
+                <MenuItem Header="{x:Static properties:Resources.Connection}" Click="DeveloperContact_Click"/>
+                <MenuItem Header="{x:Static properties:Resources.DeveloperWebPage}" Click="DeveloperWebSite_Click"/>
+                <MenuItem Header="{x:Static properties:Resources.ContactX}" Click="DeveloperX_Click" />
+                <MenuItem Header="{x:Static properties:Resources.Developer}" Click="DeveloperSourceCode_Click" />
             </MenuItem>
         </Menu>
 
         <DataGrid x:Name="dataGrid" Grid.Row="1" AutoGenerateColumns="False" IsReadOnly="True" MouseDoubleClick="ContextMenu_Change">
             <DataGrid.ContextMenu>
                 <ContextMenu>
-                    <MenuItem Header="Módósítás" Click="ContextMenu_Change"/>
-                    <MenuItem Header="Rendelés törlése" Click="ContextMenu_Delete" />
-                    <MenuItem Header="Ember Törlése (a rendelései megmaradnak)" Click="ContextMenu_Delete_Custumer" />
+                    <MenuItem Header="{x:Static properties:Resources.ChangeTitle}" Click="ContextMenu_Change"/>
+                    <MenuItem Header="{x:Static properties:Resources.DeleteOrderTitle}" Click="ContextMenu_Delete" />
+                    <MenuItem Header="{x:Static properties:Resources.DeleteCostumerTitle}" Click="ContextMenu_Delete_Custumer" />
                 </ContextMenu>
             </DataGrid.ContextMenu>
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Név" Binding="{Binding Name}"/>
-                <DataGridTextColumn Header="Cím" Binding="{Binding Address}"/>
-                <DataGridTextColumn Header="TAJ szám" Binding="{Binding TajNumber}"/>
+                <DataGridTextColumn Header="{x:Static properties:Resources.NameHeader}" Binding="{Binding Name}"/>
+                <DataGridTextColumn Header="{x:Static properties:Resources.AddresHeader}" Binding="{Binding Address}"/>
+                <DataGridTextColumn Header="{x:Static properties:Resources.InsuranceNumberHeader}" Binding="{Binding TajNumber}"/>
                 <DataGridTextColumn Header="Rendelési szám" Binding="{Binding OrderNumber}"/>
                 <DataGridTextColumn Header="Rendelési dátum" Binding="{Binding OrderDate}"/>
                 <DataGridTextColumn Header="Rendelés kiadásának dátuma" Binding="{Binding OrderReleaseDate}"/>
@@ -75,7 +72,7 @@
 
         <StackPanel Grid.Row="2" Orientation="Horizontal" Background="LightGray" VerticalAlignment="Center">
             <Label Content="© 2023 - Koncsik" />
-            <Label Content="version: 0.9 Beta build" />
+            <Label Content="1.0 Beta build" />
         </StackPanel>
     </Grid>
 
