--- a/ShoeDatabase/View/NewCustumer.xaml
+++ b/ShoeDatabase/View/NewCustumer.xaml
@@ -1,12 +1,13 @@
 ﻿<Window x:Class="ShoeDatabase.View.NewCustumer"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:properties="clr-namespace:ShoeDatabase.I18N"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ShoeDatabase.View"
          xmlns:sys="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
-        Title="Új vásárló" Height="450" Width="800">
+        Title="{x:Static properties:Resources.NewMan}" Height="450" Width="800">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -28,21 +29,21 @@
             <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
 
-        <Label Grid.Row="0" Grid.Column="0" Content="Elmentett emberek:"/>
+        <Label Grid.Row="0" Grid.Column="0" Content="{x:Static properties:Resources.SavedCostomersLabel}"/>
         <ComboBox x:Name="custumerComboBox" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Stretch" 
                   DisplayMemberPath="Name" SelectedValuePath="Id" TextSearch.TextPath="Name"
                    SelectionChanged="CustomerComboBox_SelectionChanged" SelectedIndex="0" IsTextSearchEnabled="True" />
 
-        <Label Grid.Row="1" Grid.Column="0" Content="Név:"/>
+        <Label Grid.Row="1" Grid.Column="0" Content="{x:Static properties:Resources.NameLabel}"/>
         <TextBox x:Name="nameBox" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch"/>
 
-        <Label Grid.Row="2" Grid.Column="0" Content="Cím:"/>
+        <Label Grid.Row="2" Grid.Column="0" Content="{x:Static properties:Resources.AddressLabel}"/>
         <TextBox x:Name="addressBox" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Stretch"/>
 
-        <Label Grid.Row="3" Grid.Column="0" Content="TAJ szám:"/>
+        <Label Grid.Row="3" Grid.Column="0" Content="{x:Static properties:Resources.InsuranceNumberLabel}"/>
         <TextBox x:Name="tajNumberBox" Grid.Row="3" Grid.Column="1" PreviewTextInput="NumberValidationTextBox" TextChanged="TajNumberBox_TextChanged" HorizontalAlignment="Stretch"/>
 
-        <Label Grid.Row="4" Grid.Column="0" Content="Mejegyzés:"/>
+        <Label Grid.Row="4" Grid.Column="0" Content="{x:Static properties:Resources.NoteLabel}"/>
         <TextBox x:Name="noteBox" Grid.Row="4" Grid.Column="1"
                 Height="Auto" 
                 MinLines="3"
@@ -50,14 +51,13 @@
                 TextWrapping="Wrap"
                  HorizontalAlignment="Stretch"/>
 
-        <Button x:Name="DeleteButton" Width="Auto" Height="50" Grid.Row="8" Grid.Column="1" Click="DeleteButton_Click">
-            Törlés
-        </Button>
+        <Button x:Name="DeleteButton" Width="Auto" Height="50" Grid.Row="8" Grid.Column="1" Click="DeleteButton_Click" Content="{x:Static properties:Resources.DeleteHeader}"/>
 
 
 
-        <Button x:Name="CancelButton" Width="Auto" Height="50" Grid.Row="10" Grid.Column="0" Click="CancelButton_Click">Mégse</Button>
-        <Button x:Name="SaveButton" Width="Auto" Height="50" Grid.Row="10"  Grid.Column="1" Click="SaveButton_Click">Mentés</Button>
+
+        <Button x:Name="CancelButton" Width="Auto" Height="50" Grid.Row="10" Grid.Column="0" Click="CancelButton_Click" Content="{x:Static properties:Resources.CancleHeader}"/>
+        <Button x:Name="SaveButton" Width="Auto" Height="50" Grid.Row="10"  Grid.Column="1" Click="SaveButton_Click" Content="{x:Static properties:Resources.SaveHeader}"/>
     </Grid>
 
 </Window>
