--- a/ShoeDatabase/View/NewEntryWindow.xaml
+++ b/ShoeDatabase/View/NewEntryWindow.xaml
@@ -3,7 +3,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
-        Title="Új Rendelés hozzáadása" Height="450" Width="600">
+        Title="{x:Static properties:Resources.NewOrederTitle}" Height="450" Width="600">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
