--- a/ShoeDatabase/View/RenameDialog.xaml
+++ b/ShoeDatabase/View/RenameDialog.xaml
@@ -1,7 +1,8 @@
 ﻿<Window x:Class="ShoeDatabase.View.RenameDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:properties="clr-namespace:ShoeDatabase.I18N"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Átnevezés" Height="150" Width="300">
+        Title="{x:Static properties:Resources.RenameHeader}" Height="150" Width="300">
     <Grid>
         <TextBox x:Name="RenameTextBox" Margin="10,10,10,60" />
         <Button x:Name="OkButton" Content="OK" Width="75" Height="25" VerticalAlignment="Bottom" Margin="60,0,0,10" HorizontalAlignment="Left" Click="OkButton_Click"/>
