--- a/ShoeDatabase/View/Settings.xaml
+++ b/ShoeDatabase/View/Settings.xaml
@@ -1,5 +1,6 @@
 ﻿<Window x:Class="ShoeDatabase.View.Settings"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:properties="clr-namespace:ShoeDatabase.I18N"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -27,11 +28,11 @@
             <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
 
-        <Label Grid.Row="0" Grid.Column="0" Content="Adatbázis elérési útvonala:"/>
-        <Button x:Name="dataBaseLocation" Grid.Row="0" Grid.Column="1" Click="SelectDataBaseButton_Click" HorizontalAlignment="Stretch">Elérési út kiválasztása</Button>
+        <Label Grid.Row="0" Grid.Column="0" Content="{x:Static properties:Resources.DatabaseLocationLabel}"/>
+        <Button x:Name="dataBaseLocation" Grid.Row="0" Grid.Column="1" Click="SelectDataBaseButton_Click" HorizontalAlignment="Stretch" Content="{x:Static properties:Resources.NameLabel}"/>
 
-       
-       
+
+
     </Grid>
 
 </Window>
