--- a/ShoeDatabase/App.xaml
+++ b/ShoeDatabase/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="ShoeDatabase.App"
+﻿<Application x:Class="KoOrderRegister.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ShoeDatabase"
