--- a/ShoeDatabase/View/NewCustumer.xaml
+++ b/ShoeDatabase/View/NewCustumer.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="ShoeDatabase.View.NewCustumer"
+﻿<Window x:Class="KoOrderRegister.View.NewCustumer"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:properties="clr-namespace:ShoeDatabase.I18N"
+        xmlns:properties="clr-namespace:KoOrderRegister.I18N"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ShoeDatabase.View"
+        xmlns:local="clr-namespace:KoOrderRegister.View"
          xmlns:sys="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
         Title="{x:Static properties:Resources.NewMan}" Height="450" Width="800">
