--- a/ShoeDatabase/View/RenameDialog.xaml
+++ b/ShoeDatabase/View/RenameDialog.xaml
@@ -1,6 +1,6 @@
-﻿<Window x:Class="ShoeDatabase.View.RenameDialog"
+﻿<Window x:Class="KoOrderRegister.View.RenameDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:properties="clr-namespace:ShoeDatabase.I18N"
+        xmlns:properties="clr-namespace:KoOrderRegister.I18N"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="{x:Static properties:Resources.RenameHeader}" Height="150" Width="300">
     <Grid>
