--- a/ShoeDatabase/View/Settings.xaml
+++ b/ShoeDatabase/View/Settings.xaml
@@ -1,6 +1,6 @@
-﻿<Window x:Class="ShoeDatabase.View.Settings"
+﻿<Window x:Class="KoOrderRegister.View.Settings"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:properties="clr-namespace:ShoeDatabase.I18N"
+        xmlns:properties="clr-namespace:KoOrderRegister.I18N"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
