--- a/ShoeDatabase/View/NewCustomer.xaml
+++ b/ShoeDatabase/View/NewCustomer.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="KoOrderRegister.View.NewCustumer"
+﻿<Window x:Class="KoOrderRegister.View.NewCustomer"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:properties="clr-namespace:KoOrderRegister.I18N"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
