--- a/KoOrderRegister/Modules/Order/List/Pages/OrderListPage.xaml
+++ b/KoOrderRegister/Modules/Order/List/Pages/OrderListPage.xaml
@@ -1,12 +1,58 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="KoOrderRegister.Modules.Order.List.Pages.OrderListPage"
-             Title="OrderListPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
-</ContentPage>
+             x:Class="KoOrderRegister.Modules.Order.Pages.OrderListPage"
+             xmlns:orderListViewsModel="clr-namespace:KoOrderRegister.Modules.Order.ViewModels"
+             xmlns:res="clr-namespace:KoOrderRegister.Localization"
+             Title="{x:Static res:AppRes.Orders}">
+    <ContentPage.ToolbarItems>
+     
+    </ContentPage.ToolbarItems>
+    <ScrollView>
+            <VerticalStackLayout Padding="20">
+            <Grid Padding="10"
+                  RowDefinitions="Auto"
+                  ColumnDefinitions="*,*,*">
+                <Label Text="{x:Static res:AppRes.OrderNumber}"
+                       Grid.Column="0"
+                       FontAttributes="Bold"
+                       HorizontalOptions="Center" />
+                <Label Text="{x:Static res:AppRes.Date}"
+                       Grid.Column="1"
+                       FontAttributes="Bold"
+                       HorizontalOptions="Center" />
+                <Label Text="{x:Static res:AppRes.Name}"
+                       Grid.Column="2"
+                       FontAttributes="Bold"
+                       HorizontalOptions="Center" />
+            </Grid>
+            <CollectionView x:Name="ordersCollectionView"
+                                ItemsSource="{Binding Orders}">
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid Padding="10"
+                                  RowDefinitions="Auto,Auto,Auto"
+                                  ColumnDefinitions="*,*,*">
+                                <Label Text="{Binding OrderNumber}"
+                                       Grid.Row="0"
+                                       Grid.Column="0" />
+                            <Label Text="{Binding OrderDate}"
+                                   Grid.Row="0"
+                                   Grid.Column="1" />
+                            <Label Text="{Binding Order.Name}"
+                                       Grid.Row="0"
+                                       Grid.Column="2" />
+
+                            <BoxView HeightRequest="1"
+                                     Color="Gray"
+                                     Grid.ColumnSpan="3"
+                                     Grid.Row="1"
+                                     HorizontalOptions="Fill"
+                                     Margin="0,10,0,0" />
+                        </Grid>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+            </VerticalStackLayout>
+        </ScrollView>
+    </ContentPage>
